--- a/main.tex
+++ b/main.tex
@@ -80,13 +80,15 @@ Luego veremos bien el formato, esto de momento es para tener un esqueleto.
 \begin{proc}{EdR}
 {
 \In a: Aula,
+\In f: \Z,
+\In c: \Z,
 \In s: Examen,
 \In cantEstudiantes: \Z
 }{
 \Tipo{EdR}
 }
     \requiereLargo{
-        aulaCuadrada(a) \yLuego 
+        (f = c) \yLuego
     \\ aulaVacia(a) \yLuego 
     \\ examenValido(solucion) \yLuego 
     \\ cantValidaEstudiantes(a, cantEstudiantes) }
